fixed z-index variable for Fancybox

--- a/src/assets/css/_variables-popup.scss
+++ b/src/assets/css/_variables-popup.scss
@@ -1,6 +1,7 @@
 /**
  * Popup Galleries CSS Variables
  */
-.vp-pswp {
+.vp-pswp,
+.vp-fancybox {
     --vp-popup__z-index: 1500;
 }
